syntax = "proto3";
package auth;

option go_package = "github.com/hariharasudhan-nineleaps/go-grpc-blogger/server/grpc/proto/auth";


message AuthRequest{
    string email = 1;
    string password = 2;
}

message AuthResponse{
    string id = 1;
    string accessToken = 2;
    string name = 3;
    string email = 4;
}


service AuthService {
    rpc Login(AuthRequest) returns (AuthResponse){};
}